--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.7",
     "fastclick": "^1.0.6",
     "file-loader": "^4.2.0",
+    "iconfont-plugin-webpack": "^1.1.4",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
@@ -31,6 +32,8 @@
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "svg-sprite-loader": "^4.1.6",
+    "svg-spritemap-webpack-plugin": "^3.5.3",
     "svgxuse": "^1.2.6",
     "terser-webpack-plugin": "^2.2.1",
     "url-loader": "^2.1.0",
